# LocalVideoTranslator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: app.py  model.py  translate.py
src/utils/: files.py
templates/: index.html
